검색 박스 컴포넌트 생성 	modified:   src/app/app.component.tns.scss 	modified:   src/app/home/accom-list/accom-list.component.tns.html 	modified:   src/app/home/accom-list/accom-list.component.tns.scss 	modified:   src/app/home/accom-list/accom-list.component.tns.ts 	modified:   src/app/home/home.module.tns.ts 	modified:   src/app/home/main/main.component.tns.html 	modified:   src/app/home/main/main.component.tns.scss 	modified:   src/app/pipe/customdate.pipe.ts 	new file:   src/app/shared/mobile/search-box/search-box.component.html 	new file:   src/app/shared/mobile/search-box/search-box.component.scss 	new file:   src/app/shared/mobile/search-box/search-box.component.spec.ts 	new file:   src/app/shared/mobile/search-box/search-box.component.tns.html 	new file:   src/app/shared/mobile/search-box/search-box.component.tns.scss 	new file:   src/app/shared/mobile/search-box/search-box.component.tns.ts 	new file:   src/app/shared/mobile/search-box/search-box.component.ts 	modified:   src/app/shared/shared.module.tns.ts 	modified:   src/app/shared/shared.module.ts

--- a/src/app/app.component.tns.scss
+++ b/src/app/app.component.tns.scss
@@ -1,2 +1,6 @@
 @import '~@nativescript/theme/css/core.css';
 @import '~@nativescript/theme/css/default.css';
+
+.btn-primary{
+    background-color: #3955ff;
+}
