--- a/src/app/home/main/main.component.tns.scss
+++ b/src/app/home/main/main.component.tns.scss
@@ -1,1 +1,3 @@
 /* Add mobile styles for the component here.  */
+.recom-text{color:#1b3a57; text-align: center; font-size: 30; font-weight: bold; margin-top: 30;}
+.main_partners{ width: 80; height: 50; background-repeat: no-repeat;}
