--- a/src/app/home/accom-list/accom-list.component.tns.scss
+++ b/src/app/home/accom-list/accom-list.component.tns.scss
@@ -1,1 +1,17 @@
 /* Add mobile styles for the component here.  */
+.list-wrapper{margin-left: 10; margin-right: 10; margin-bottom: 70;}
+.list-regular-title{font-size: 20; font-weight: bold; color: #333;}
+.line{height: 2; color: #333; background-color: #333; margin-bottom: 10; margin-top: 5;}
+
+.content{
+    width: 90%;
+    .card-img{ }
+}
+
+.accom-info{
+    .accom-area{ color: #666;}
+    .item-name{font-size: 18; color: #333;}
+    .item-org-price{text-decoration: line-through;}
+    .item-price{color: #333;}
+    .sale-rate{color: #93b85f; margin-left: 10;}
+}
