푸터 메뉴 퍼블리싱 	modified:   src/app/home/home.component.tns.html 	modified:   src/app/home/layout/footer/footer.component.tns.html 	modified:   src/app/home/layout/footer/footer.component.tns.scss 	modified:   src/app/home/main/main.component.tns.html 	new file:   src/assets/images/fingerprint.png 	new file:   src/assets/images/home.png 	new file:   src/assets/images/more.png

--- a/src/app/home/home.component.tns.html
+++ b/src/app/home/home.component.tns.html
@@ -1,6 +1,6 @@
-<GridLayout>
-    <page-router-outlet actionBarVisibility="never"></page-router-outlet>
-    <GridLayout verticalAlignment="bottom">
+<GridLayout rows="*, auto"> 
+    <page-router-outlet actionBarVisibility="never" row="0"></page-router-outlet>
+    <GridLayout height="60" row="1" borderTopWidth="1" borderColor="#eee">
         <app-footer></app-footer>
     </GridLayout>
 </GridLayout>
