--- a/src/app/home/main/main.component.tns.html
+++ b/src/app/home/main/main.component.tns.html
@@ -1,4 +1,4 @@
-<GridLayout marginBottom="70">
+<GridLayout>
     <ScrollView #scrollView (scroll)="onScroll($event, scrollView, topView)">
         <StackLayout>
             <StackLayout #topView height="250" backgroundImage="~/assets/images/visual.png">
