--- a/src/app/home/layout/footer/footer.component.tns.scss
+++ b/src/app/home/layout/footer/footer.component.tns.scss
@@ -1,1 +1,12 @@
 /* Add mobile styles for the component here.  */
+
+.menu-box{
+    text-align: center;
+}
+.nav_img{
+    background-repeat: no-repeat;
+    width: 30;
+    height: 20;
+    text-align: center;
+    font-size: 20;
+}
