--- a/src/app/home/accom-list/accom-list.component.tns.html
+++ b/src/app/home/accom-list/accom-list.component.tns.html
@@ -6,71 +6,23 @@
 
     
     <StackLayout marginLeft="10" marginRight="10" marginTop="10" row="0">
-        <ns-search-box></ns-search-box>
+        <ns-search-box (onSearch)="triggerSearch()"></ns-search-box>
     </StackLayout>
 
     <StackLayout width="100%" backgroundColor="white" padding="10" >
         <Label text="이 지역 추천상품" class="list-regular-title"></Label>
         <ScrollView orientation="horizontal" scrollBarIndicatorVisible="false">
             <StackLayout orientation="horizontal">
-                <StackLayout margin="10">
-                    <StackLayout height="110" width="125" borderRadius="5" backgroundImage="~/assets/images/thumb/thumb1.png">
+                <StackLayout margin="10" *ngFor="let item of recommandList">
+                    <StackLayout height="110" width="125" borderRadius="5" boxSizing="border-box" [backgroundImage]="item.link">
                         <Button horizontalAlignment="left" marginRight="5"
-                            marginTop="0" width="60" height="40" text="가평"
+                            marginTop="0" width="60" height="40" text="{{ item.Addr1 | sido }}"
                             color="#fff" backgroundColor="#333">
                         </Button>
                     </StackLayout>
-                    <Label fontSize="14" color="#000" text="남이섬 베스트 카라반">
+                    <Label fontSize="14" color="#000" [text]="item.AcomNm">
                     </Label>
-                    <Label fontSize="12" color="#999999" text="50,000">
-                    </Label>
-                </StackLayout>
-                <StackLayout margin="10">
-                    <StackLayout height="110" width="125" borderRadius="5" backgroundImage="~/assets/images/thumb/thumb2.png">
-                        <Button horizontalAlignment="right" marginRight="5"
-                            marginTop="80" width="50" height="20" text="3.9"
-                            color="#fff" backgroundColor="#3b75ff">
-                        </Button>
-                    </StackLayout>
-                    <Label fontSize="14" color="#000" text="남이섬 베스트 카라반">
-                    </Label>
-                    <Label fontSize="12" color="#999999" text="50,000">
-                    </Label>
-                </StackLayout>
-                <StackLayout margin="10">
-                    <StackLayout height="110" width="125" borderRadius="5" backgroundImage="~/assets/images/thumb/thumb3.png">
-                        <Button horizontalAlignment="right" marginRight="5"
-                            marginTop="80" width="50" height="20" text="3.9"
-                            color="#fff" backgroundColor="#3b75ff">
-                        </Button>
-                    </StackLayout>
-                    <Label fontSize="14" color="#000" text="남이섬 베스트 카라반">
-                    </Label>
-                    <Label fontSize="12" color="#999999" text="50,000">
-                    </Label>
-                </StackLayout>
-                <StackLayout margin="10">
-                    <StackLayout height="110" width="125" borderRadius="5" backgroundImage="~/assets/images/thumb/thumb4.png">
-                        <Button horizontalAlignment="right" marginRight="5"
-                            marginTop="80" width="50" height="20" text="3.9"
-                            color="#fff" backgroundColor="#3b75ff">
-                        </Button>
-                    </StackLayout>
-                    <Label fontSize="14" color="#000" text="남이섬 베스트 카라반">
-                    </Label>
-                    <Label fontSize="12" color="#999999" text="50,000">
-                    </Label>
-                </StackLayout>
-                <StackLayout margin="10">
-                    <StackLayout height="110" width="125" borderRadius="5" backgroundImage="~/assets/images/thumb/thumb5.png">
-                        <Button horizontalAlignment="right" marginRight="5"
-                            marginTop="80" width="50" height="20" text="3.9"
-                            color="#fff" backgroundColor="#3b75ff">
-                        </Button>
-                    </StackLayout>
-                    <Label fontSize="14" color="#000" text="남이섬 베스트 카라반">
-                    </Label>
-                    <Label fontSize="12" color="#999999" text="50,000">
+                    <Label fontSize="12" color="#999999" text="{{ item.price | comma }}원">
                     </Label>
                 </StackLayout>
             </StackLayout>
@@ -78,7 +30,7 @@
     </StackLayout>
     
     <!-- tab content1 -->
-    <StackLayout *ngIf="selectedTabview == 0" rows="auto, auto, *" row="2" width="100%" height="100%"
+    <StackLayout rows="auto, auto, *" row="2" width="100%" height="100%"
         backgroundColor="white">
         <GridLayout columns="auto, *" class="list-title" row="0" borderBottom="2">
             <Label text="이 지역 일반상품" column="0" class="list-regular-title"></Label>
@@ -86,68 +38,23 @@
         </GridLayout>
         <StackLayout class="line" width="100%" row="1"></StackLayout>
             <StackLayout class="main">
-                <StackLayout class="content">
-                    <Image stretch="aspectFill" class="card-img" (tap)="showItem(items[0].id)"
-                        [src]="items[0].cover"></Image>
+                <StackLayout class="content" *ngFor="let item of list">
+                    <Image class="card-img" [src]="item.link"></Image>
                     <GridLayout width="100%" rows="auto, auto, auto, auto"
                         class="accom-info" verticalAlignment="center">
-                        <Label [text]="items[0].category" row="0" class="accom-area"></Label>
+                        <Label text="{{ item.Addr1 | sido }}" row="0" class="accom-area"></Label>
                         <Label row="1" class="item-name" textwrap="true"
                             verticalAlignment="bottom"
-                            horizontalAlignment="left" [text]="items[0].name"></Label>
-                        <Label row="2" class="item-org-price" textwrap="true"
+                            horizontalAlignment="left" [text]="item.AcomNm"></Label>
+                        <Label row="2" class="item-org-price" textwrap="true" *ngIf="saleRate > 0"
                             verticalAlignment="bottom"
-                            horizontalAlignment="left" [text]="items[0].price"></Label>
+                            horizontalAlignment="left" text="{{ item.DFTPrice | comma }}원"></Label>
                         <GridLayout row="3" rows="auto" columns="auto,auto">
                             <Label row="1" col="0" class="item-price"
                                 textwrap="true" verticalAlignment="top"
-                                horizontalAlignment="left" [text]="items[0].price"></Label>
-                            <Label col="1" row="1" class="sale-rate"
-                                [text]="items[0].comments"></Label>
-                        </GridLayout>
-                    </GridLayout>
-                    <StackLayout width="100%" marginTop="5" class="line"></StackLayout>
-                </StackLayout>
-                <StackLayout class="content">
-                    <Image stretch="aspectFill" class="card-img" (tap)="showItem(items[0].id)"
-                        [src]="items[0].cover"></Image>
-                    <GridLayout width="100%" rows="auto, auto, auto, auto"
-                        class="accom-info" verticalAlignment="center">
-                        <Label [text]="items[0].category" row="0" class="accom-area"></Label>
-                        <Label row="1" class="item-name" textwrap="true"
-                            verticalAlignment="bottom"
-                            horizontalAlignment="left" [text]="items[0].name"></Label>
-                        <Label row="2" class="item-org-price" textwrap="true"
-                            verticalAlignment="bottom"
-                            horizontalAlignment="left" [text]="items[0].price"></Label>
-                        <GridLayout row="3" rows="auto" columns="auto,auto">
-                            <Label row="1" col="0" class="item-price"
-                                textwrap="true" verticalAlignment="top"
-                                horizontalAlignment="left" [text]="items[0].price"></Label>
-                            <Label col="1" row="1" class="sale-rate"
-                                [text]="items[0].comments"></Label>
-                        </GridLayout>
-                    </GridLayout>
-                    <StackLayout width="100%" marginTop="5" class="line"></StackLayout>
-                </StackLayout>
-                <StackLayout class="content">
-                    <Image stretch="aspectFill" class="card-img" (tap)="showItem(items[0].id)"
-                        [src]="items[0].cover"></Image>
-                    <GridLayout width="100%" rows="auto, auto, auto, auto"
-                        class="accom-info" verticalAlignment="center">
-                        <Label [text]="items[0].category" row="0" class="accom-area"></Label>
-                        <Label row="1" class="item-name" textwrap="true"
-                            verticalAlignment="bottom"
-                            horizontalAlignment="left" [text]="items[0].name"></Label>
-                        <Label row="2" class="item-org-price" textwrap="true"
-                            verticalAlignment="bottom"
-                            horizontalAlignment="left" [text]="items[0].price"></Label>
-                        <GridLayout row="3" rows="auto" columns="auto,auto">
-                            <Label row="1" col="0" class="item-price"
-                                textwrap="true" verticalAlignment="top"
-                                horizontalAlignment="left" [text]="items[0].price"></Label>
-                            <Label col="1" row="1" class="sale-rate"
-                                [text]="items[0].comments"></Label>
+                                horizontalAlignment="left" text="{{ item.price | comma }}원"></Label>
+                            <Label col="1" row="1" class="sale-rate" *ngIf="saleRate > 0"
+                                text="{{ item.saleRate }}%"></Label>
                         </GridLayout>
                     </GridLayout>
                     <StackLayout width="100%" marginTop="5" class="line"></StackLayout>
