--- a/src/app/home/accom-list/accom-list.component.tns.scss
+++ b/src/app/home/accom-list/accom-list.component.tns.scss
@@ -1,11 +1,16 @@
 /* Add mobile styles for the component here.  */
-.list-wrapper{margin-left: 10; margin-right: 10; margin-bottom: 70;}
+.list-wrapper{margin-left: 10; margin-right: 10;}
 .list-regular-title{font-size: 20; font-weight: bold; color: #333;}
 .line{height: 2; color: #333; background-color: #333; margin-bottom: 10; margin-top: 5;}
 
 .content{
-    width: 90%;
-    .card-img{ }
+    width: 100%;
+    height: 0;
+    .card-img{ 
+        border-radius: 3;
+        
+    }
+    
 }
 
 .accom-info{
