--- a/src/app/home/unit-list/unit-list.component.tns.html
+++ b/src/app/home/unit-list/unit-list.component.tns.html
@@ -1,4 +1,4 @@
-<GridLayout marginBottom="70">
+<GridLayout>
     <ScrollView #scrollView (scroll)="onScroll($event, scrollView, topView)">
         <StackLayout>
             <StackLayout #topView height="250" backgroundColor="#45ab9d">
